tests/sksl/errors/ReservedNameTemplate.glsl
### Compilation failed:

error: 1: 'template' is a reserved word
1 error
